--- a/src/components/InputBox.css
+++ b/src/components/InputBox.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Rajdhani:wght@500&display=swap');
-
 #timer::-webkit-inner-spin-button, 
 #timer::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
@@ -14,6 +12,7 @@
 	background-color: transparent;
 	font-family: 'Rajdhani', sans-serif;
 	font-size: 50px;
+	text-shadow: 0 0 5px rgba(49, 204, 176, .4);
 }
 
 #timer:focus {
@@ -23,3 +22,4 @@
 #timer::selection {
 	background-color: rgba(49, 204, 176, .3);
 }
+
