--- a/src/components/RestartButton.css
+++ b/src/components/RestartButton.css
@@ -2,7 +2,7 @@
 	display: inline-block;
 	width: 150px;
 	cursor: pointer;
-	background-color: black;
+	background-color: transparent;
 	color: rgba(49, 204, 176, 1);
 	border: 2px white solid;
 	border-radius: 20px;
