--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
 	sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: black;
+	background-image: url('./background.jpeg');
+	background-size: 100vw 100vh;
+	background-repeat: no-repeat;
 	color: white;
 	overflow-x: hidden;
 }
